<resources>
    <string name="app_name">ROM Control</string>
    <string name="romcfg_folder">/mnt/sdcard/ROMControl/</string>
    <string name="modcfg_folder">/mnt/sdcard/ROMControl</string>
    <string name="boot_animation_extraction_folder">/ROMControl/BootAnimations/temp/</string>
    <string name="boot_animation_folder">/ROMControl/BootAnimations/</string>
    <string name="opacityLabel">Alpha</string>
    <string name="change_theme">Theme</string>
    <string name="restart_phone">Restart phone</string>
    <string name="restart_phone_summary">Restart Phone process to apply some of the above changes</string>
    <string name="restart_system">Restart SystemUI</string>
    <string name="restart_system_summary">Restart SystemUI process to apply some of the above changes</string>
    <string name="restart_launcher">Restart Launcher</string>
    <string name="restart_launcher_summary">You must restart the Launcher to apply any of the above changes</string>
    <string name="reboot">Reboot</string>
    <string name="reboot_fully">Reboot system to allow changes to take effect</string>
    <string name="list_summary">%s</string>
    <string name="none">None</string>
    <string name="settings">Settings</string>
    <string name="select_colour">Select colour</string>
    <string name="press_color_to_apply">Press on colour to apply</string>
    <string name="color_picker_arrow">&#8594;</string>
    <string name="hexcode_hint">Hex Code</string>
    <string name="information">Information</string>
    <string name="position_top">Top</string>
    <string name="position_bottom">Bottom</string>
    <string name="title_activity_hostname">Set hostname</string>
    <string name="action_settings">Settings</string>
    <string name="hostname_info">Use the textbox below to enter a hostname for this device.\n\nMake sure it has no special characters and contains no spaces.</string>
    <string name="hostname_set">Set hostname</string>
    <string name="hostname_current">Current hostname</string>
    <string name="hostname_original">Original hostname</string>
    <string name="hostname_new">New hostname</string>
    <string name="hostname_restore_original">Restore original</string>
    <string name="hostname_title">Hostname</string>
    <string name="hostname_summary">Change the hostname of your device as it appears on networks. Useful for managing and identifying multiple devices on a WLAN.</string>
    <string name="boot_animation_title">Boot animation</string>
    <string name="choose_file">Choose file</string>
    <string name="clear_file">Clear</string>
    <string name="choose_sound">Boot sound</string>
    <string name="animation">Selected file</string>
    <string name="sound">Sound file</string>
    <string name="bootanimation_help">Help</string>
    <string name="boot_animation_help">You can use this utility to flash boot animations that come in the bootanimation.zip format. The zip can be named anything you wish, but must not be a flashable zip. The installer won\'t let you continue unless it is an appropriate file.</string>
    <string name="enable_disable_boot">Enable/Disable animation</string>
    <string name="reboot_bootani_pref">Show the reboot dialog after making a selection?</string>
    <string name="help">Help</string>
    <string name="error_selecting_file">Error selecting File</string>
    <string name="set_animation">Set animation</string>
    <string name="set_sounds">Set sounds</string>
    <string name="boot_ani_status">Status</string>
    <string name="battery_icon_category">Battery</string>
    <string name="battery_percent">Battery percent</string>
    <string name="battery_percent_summary">Enable or disable the battery icon percent indicator</string>
    <string name="battery_icon_colour">Battery colour</string>
    <string name="battery_icon_colour_summary">Choose the colour of the battery icon</string>
    <string name="battery_low_colour">Low Battery colour</string>
    <string name="battery_low_colour_summary">Choose the colour for low battery</string>
    <string name="battery_mid_colour">Mid Battery colour</string>
    <string name="battery_mid_colour_summary">Choose the colour for medium battery</string>
    <string name="battery_text_colour">Battery text colour</string>
    <string name="battery_text_colour_summary">Choose the colour of the battery text</string>
    <string name="battery_charge_colour">Charging Colour</string>
    <string name="battery_charge_colour_summary">Choose the colour for charging</string>
    <string name="battery_bolt_colour">Bolt Colour</string>
    <string name="battery_bolt_colour_summary">Choose the colour for charging bolt</string>
    <string name="battery_led_cat">Battery LED</string>
    <string name="battery_led_low_colour">Low battery LED</string>
    <string name="battery_led_low_colour_summary">The colour of the battery LED when charging, and low</string>
    <string name="battery_led_med_colour">Medium battery LED</string>
    <string name="battery_led_med_colour_summary">The colour of the LED battery when charging and partly charged</string>
    <string name="battery_led_full_colour">Full battery LED</string>
    <string name="battery_led_full_colour_summary">The colour of the LED battery when charged fully</string>
    <string name="led_information">LED controls on this page will require a reboot to take effect</string>
    <string name="mod_screen_title">Mods</string>
    <string name="mod_crt_category">Screen Controls</string>
    <string name="mod_crt_off_title">Screen off animation</string>
    <string name="mod_power_menu_category">Power menu</string>
    <string name="mod_power_menu_title">Extended power menu</string>
    <string name="mod_power_menu_summary">Enable reboot to recovery and bootloader in the reboot menu</string>
    <string name="mod_advanced_display_title">Advanced Display</string>
    <string name="mod_advanced_display_summary">mDNIe scenario display settings</string>
    <string name="mod_airplane_title">Airplane mode</string>
    <string name="mod_airplane_summary">Show the airplane mode toggle in the power menu</string>
    <string name="mod_screenshot_title">Screenshot</string>
    <string name="mod_screenshot_summary">Show the screenshot button in the power menu</string>
    <string name="mod_silentmode_title">Silent mode</string>
    <string name="mod_silentmode_summary">Show the silent mode toggles in the power menu</string>
    <string name="mod_navbar_category">Navigation bar</string>
    <string name="mod_navbar_title">Show navigation bar</string>
    <string name="mod_navbar_summary">enable or disable the on-screen controls (Requires reboot)</string>
    <string name="mod_ime_switcher_title">IME switcher</string>
    <string name="mod_ime_switcher_summary">Enable the IME switcher icon in the notification bar</string>
    <string name="mod_sounds_category">Sounds</string>
    <string name="mod_screen_chord_title">Screenshot chord</string>
    <string name="mod_screen_chord_summary">Enable/disable the chord sound played when taking a screenshot</string>
    <string name="mod_rotation_category">Rotation</string>
    <string name="mod_rotation_title">4-way rotation</string>
    <string name="mod_rotation_summary">Enable/disable rotation along all axis (Requires reboot)</string>
    <string name="mod_long_back_title">Long back press</string>
    <string name="mod_long_back_summary">Long press the back button to kill the foreground app</string>
    <string name="mod_long_back_timeout">Long press timeout</string>
    <string name="mod_recents_screen">Recents Screen</string>
    <string name="mod_recents_clear_all">Clear all</string>
    <string name="mod_recents_clear_all_summary">Show the clear all button on the recents screen</string>
    <string name="mod_clear_all_position">Clear all position</string>
    <string name="mod_recents_rambar">RAM bar</string>
    <string name="mod_recents_rambar_summary">Show a RAM bar on the recents screen</string>
    <string name="mod_recents_rambar_color_left">RAM used</string>
    <string name="mod_recents_rambar_color_left_summary">Set the color for used RAM</string>
    <string name="mod_recents_rambar_color_right">RAM free</string>
    <string name="mod_recents_rambar_color_right_summary">Set the color for free RAM</string>
    <string name="mod_volume_headphones_nag_title">Headphones safe volume</string>
    <string name="mod_volume_headphones_nag_summary">Show the nag for safe volume levels in EU locales? (Requires Reboot)</string>
    <string name="mod_touch_key_backlight">Touch key backlight</string>
    <string name="mod_touch_key_backlight_summary">Enable or disable the touchkey backlight LED</string>
    <string name="mod_touch_key_backlight_timeout">Touch key timeout</string>
    <string name="mod_volume_adjust_sounds">Volume adjust</string>
    <string name="mod_volume_adjust_sounds_summary">Volume adjust sounds enable/disable</string>
    <string name="mod_link_nofication_volume">Link notification volume</string>
    <string name="mod_link_nofication_volume_summary">Link notification volume</string>
    <string name="mod_expandable_volume_panel">Expandable volume panel</string>
    <string name="mod_expandable_volume_panel_summary">Show the expandable volume panel button</string>
    <string name="launcher_screen_title">Launcher</string>
    <string name="launcher_title_workspace_rows">Rows</string>
    <string name="launcher_title_workspace_cols">Columns</string>
    <string name="launcher_title_default_workspace">Default Screen</string>
    <string name="launcher_title_show_search_bar">Show Search Bar</string>
    <string name="launcher_title_show_search_bar_on">Persistent search bar is on</string>
    <string name="launcher_title_show_search_bar_off">Persistent search bar is off (Warning, the app info and delete buttons that you can drag icons and widgets to will no longer show, but will still be accessible)</string>
    <string name="launcher_title_rotation">Enable Rotation</string>
    <string name="launcher_title_rotation_on">Launcher rotation is on</string>
    <string name="launcher_title_rotation_off">Launcher rotation is off</string>
    <string name="signal_icons_title">Signal Icons</string>
    <string name="sysui_statusbar_icon_colors_title">Signal icon colours</string>
    <string name="sysui_statusbar_icon_colors_summary">Change the colour of the wifi, signal, data type and airplane icons</string>
    <string name="signal_icons_h_plus_enabled">Distinguish H+</string>
    <string name="signal_icons_h_plus_enabled_summary">Show the H+ icon when connected to a HSPA+ network</string>
    <string name="signal_icons_4g_enabled">Show 4G or LTE</string>
    <string name="signal_icons_4g_enabled_summary_on">Show 4G rather than LTE when connected to such a network</string>
    <string name="signal_icons_4g_enabled_summary_off">Show LTE rather than 4G when connected to such a network</string>
    <string name="led_screen_title">LED</string>
     <string name="network_traffic_title">Network traffic</string>
     <string name="show_network_traffic_state">Status bar traffic monitor</string>
     <string name="show_network_traffic_unit">Display unit</string>
     <string name="show_network_traffic_frequency">Update interval</string>
     <string name="network_traffic_hide_inactivity">Hide inactivity</string>
     <string name="network_traffic_hide_inactivity_summary">Hide the indicator if there has been no network activity</string>
     <string name="network_traffic_text">Labels</string>
     <string name="network_traffic_text_summary">Show U and D for Upload and Download net to their values</string>
     <string name="network_traffic_icon">Icon</string>
     <string name="network_traffic_icon_summary">Show a small icon next to the indicator</string>
     <string name="network_traffic_color">Text and icon color</string>
     <string name="network_traffic_color_summary">Set the color of any text and icons</string>
</resources>