<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:key="settings_root">
    <PreferenceScreen 
        android:title="@string/battery_icon_category" 
        android:key="settings_battery">
        <!-- Battery percent on/off -->
        <CheckBoxPreference 
            android:title="@string/battery_percent" 
            android:key="status_bar_show_battery_percent" 
            android:summary="@string/battery_percent_summary"/>
        <!-- Battery Text Colour -->
		<com.ultima.settings.colorpicker.ColorPickerPreference 
		    android:title="@string/battery_text_colour" 
		    android:key="status_bar_battery_percent_color" 
		    android:summary="@string/battery_text_colour_summary" 
		    android:dialogTitle="@string/select_colour" />
		<!-- Battery Low Color -->
		<com.ultima.settings.colorpicker.ColorPickerPreference 
		    android:title="@string/battery_low_colour" 
		    android:key="status_bar_battery_low_color" 
		    android:summary="@string/battery_low_colour_summary" 
		    android:dialogTitle="@string/select_colour" />
		<!-- Battery Mid Color -->
		<com.ultima.settings.colorpicker.ColorPickerPreference 
		    android:title="@string/battery_mid_colour" 
		    android:key="status_bar_battery_mid_color" 
		    android:summary="@string/battery_mid_colour_summary" 
		    android:dialogTitle="@string/select_colour" />
		<!-- Battery Color -->
		<com.ultima.settings.colorpicker.ColorPickerPreference 
		    android:title="@string/battery_icon_colour" 
		    android:key="status_bar_battery_norm_color" 
		    android:summary="@string/battery_icon_colour_summary" 
		    android:dialogTitle="@string/select_colour" />
		<!-- Battery Charge Color -->
		<com.ultima.settings.colorpicker.ColorPickerPreference 
		    android:title="@string/battery_charge_colour" 
		    android:key="status_bar_battery_charge_color" 
		    android:summary="@string/battery_charge_colour_summary" 
		    android:dialogTitle="@string/select_colour" />
		<!-- Battery Bolt Color -->
		<com.ultima.settings.colorpicker.ColorPickerPreference 
		    android:title="@string/battery_bolt_colour" 
		    android:key="status_bar_battery_bolt_color" 
		    android:summary="@string/battery_bolt_colour_summary" 
		    android:dialogTitle="@string/select_colour" />
		
				
		<Preference android:title="@string/restart_system" 
		    android:key="tool#restartsystemui" 
		    android:summary="@string/restart_system_summary" /> 

    </PreferenceScreen>
</PreferenceScreen>
