<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ultima="http://schemas.android.com/apk/res-auto/com.ultima.settings"
     android:key="settings_test"> 
    <PreferenceScreen 
        android:title="@string/mod_screen_title" 
        android:key="settings_mod_screen"
        android:icon="?attr/modsIcon"
        android:widgetLayout="@layout/round_more_icon">
        	
        	<PreferenceCategory 
        	    android:title="@string/mod_crt_category" 
        	    android:key="crt_category">
	           	
				<!-- Currently FC's when you rotate the display
				<com.ultima.settings.preferences.UltimaListPreference 
				    android:title="@string/mod_crt_on_title"
				    android:key="system_crt_on"
				    android:summary="@string/list_summary"
				    android:entries="@array/crt_on_animation_entries"
				    android:entryValues="@array/crt_on_animation_values"
				    android:defaultValue="2" /> -->
				    
				<com.ultima.settings.preferences.UltimaListPreference 
				    android:title="@string/mod_crt_off_title"
				    android:key="system_crt_off"
				    android:summary="@string/list_summary"
				    android:entries="@array/crt_off_animation_entries"
				    android:entryValues="@array/crt_off_animation_values"
				    android:defaultValue="0" />
				
				<Preference
				    android:title="@string/mod_advanced_display_title"
				    android:summary="@string/mod_advanced_display_summary"
				    android:key="activity;com.cyanogenmod.settings.device;com.cyanogenmod.settings.device.DisplaySettings" />     
				 
				 <com.ultima.settings.preferences.UltimaCheckboxPreference   
				     android:title="@string/mod_touch_key_backlight"
				     android:key="system_pref_button_brightness"
				     android:summary="@string/mod_touch_key_backlight_summary"
				     defaultValue="1"/>
				 
				 <com.ultima.settings.preferences.UltimaListPreference 
				    android:title="@string/mod_touch_key_backlight_timeout"
				    android:key="system_pref_button_timeout"
				    android:summary="@string/list_summary"
				    android:entries="@array/touchkey_timeout_entries"
				    android:entryValues="@array/touchkey_timeout_values"
				    android:dependency="system_pref_button_brightness"
				    android:defaultValue="4" />   	    
        	</PreferenceCategory>
        	<PreferenceCategory 
        	    android:title="@string/mod_power_menu_category"
        	    android:key="mod_power_category">
				
        	    	<com.ultima.settings.preferences.UltimaCheckboxPreference   
        	    	    android:title="@string/mod_power_menu_title"
        	    	    android:summary="@string/mod_power_menu_summary"
        	    	    android:key="system_pref_power_menu"
        	    	    defaultValue="0" />
        	    	
        	    	<com.ultima.settings.preferences.UltimaCheckboxPreference   
        	    	    android:title="@string/mod_screenshot_title"
        	    	    android:summary="@string/mod_screenshot_summary"
        	    	    android:key="system_pref_power_menu_screenshot"
        	    	    defaultValue="0" />
        	    	
        	    	<com.ultima.settings.preferences.UltimaCheckboxPreference   
        	    	    android:title="@string/mod_airplane_title"
        	    	    android:summary="@string/mod_airplane_summary"
        	    	    android:key="system_pref_power_menu_airplane"
        	    	    defaultValue="0" />
        	    	
        	    	<com.ultima.settings.preferences.UltimaCheckboxPreference   
        	    	    android:title="@string/mod_silentmode_title"
        	    	    android:summary="@string/mod_silentmode_summary"
        	    	    android:key="system_pref_power_menu_silentmode"
        	    	    defaultValue="0" />
        	    	
        	</PreferenceCategory>
        	<PreferenceCategory 
        	    android:title="@string/mod_navbar_category"
        	    android:key="mod_navbar_category">
        	    	
        	    	<com.ultima.settings.preferences.UltimaCheckboxPreference    
        	    	    android:title="@string/mod_navbar_title"
        	    	    android:summary="@string/mod_navbar_summary"
        	    	    android:key="system_pref_show_navbar"
        	    	    defaultValue="0" />
        	    	
        	    	
        	</PreferenceCategory>
        	<PreferenceCategory 
        	    android:title="@string/mod_ime_switcher_title"
        	    android:key="mod_ime_category">
        	    	
        	    	<com.ultima.settings.preferences.UltimaCheckboxPreference    
        	    	    android:title="@string/mod_ime_switcher_title"
        	    	    android:key="system_pref_ime_switcher_notif"
        	    	    android:summary="@string/mod_ime_switcher_summary"
        	    	    defaultValue="1" />
        	    	
        	</PreferenceCategory>
        	<PreferenceCategory 
        	    android:title="@string/mod_sounds_category"
        	    android:key="mod_sounds_category">
        	    	
        	    	<com.ultima.settings.preferences.UltimaCheckboxPreference    
        	    	    android:title="@string/mod_screen_chord_title"
        	    	    android:key="system_pref_screenshot_chord"
        	    	    android:summary="@string/mod_screen_chord_summary"
        	    	    defaultValue="1" />
        	    	
        	    	<com.ultima.settings.preferences.UltimaCheckboxPreference    
	        	        android:title="@string/mod_volume_headphones_nag_title"
	        	        android:key="system_pref_safe_volume_nag"
	        	        android:summary="@string/mod_volume_headphones_nag_summary"
	        	        defaultValue="1"/>
        	    	
        	    	<com.ultima.settings.preferences.UltimaCheckboxPreference    
	        	        android:title="@string/mod_volume_adjust_sounds"
	        	        android:key="system_pref_volume_adjust_sounds"
	        	        android:summary="@string/mod_volume_adjust_sounds_summary"
	        	        defaultValue="1" />
        	    	
        	    	<com.ultima.settings.preferences.UltimaCheckboxPreference    
	        	        android:title="@string/mod_link_nofication_volume"
	        	        android:key="system_pref_volume_link_notification"
	        	        android:summary="@string/mod_link_nofication_volume_summary"
	        	        defaultValue="0" />
        	    	
        	    	<com.ultima.settings.preferences.UltimaCheckboxPreference    
	        	        android:title="@string/mod_expandable_volume_panel"
	        	        android:key="system_pref_volume_overlay"
	        	        android:summary="@string/mod_expandable_volume_panel_summary"
	        	        defaultValue="0" />
        	    	
        	</PreferenceCategory>
        	<PreferenceCategory 
        	    android:title="@string/mod_rotation_category"
        	    android:key="mod_rotation_category">
        	    	
        	    	<com.ultima.settings.preferences.UltimaCheckboxPreference    
        	    	    android:title="@string/mod_rotation_title"
        	    	    android:key="system_pref_all_rotation"
        	    	    android:summary="@string/mod_rotation_summary"
        	    	    defaultValue="0" />
        	    	
        	</PreferenceCategory> 
        	<PreferenceCategory 
        	    android:title="@string/mod_long_back_title"
        	    android:key="mod_long_back">
        	    	<com.ultima.settings.preferences.UltimaCheckboxPreference    
        	    	    android:title="@string/mod_long_back_title"
        	    	    android:summary="@string/mod_long_back_summary"
        	    	    android:key="system_pref_long_back_kill"
        	    	    defaultValue="0" />
        	    	
        	    	<com.ultima.settings.preferences.UltimaListPreference 
					    android:title="@string/mod_long_back_timeout"
					    android:key="system_pref_long_back_kill_timeout"
					    android:summary="@string/list_summary"
					    android:entries="@array/long_press_timeout_entries"
					    android:entryValues="@array/long_press_timeout_values"
					    defaultValue="1"
					    android:dependency="system_pref_long_back_kill" />
        	</PreferenceCategory> 
        	<PreferenceCategory
        	    android:title="@string/mod_recents_screen"
        	    android:key="mod_recents_screen">
        	    	<com.ultima.settings.preferences.UltimaCheckboxPreference    
        	    	    android:title="@string/mod_recents_clear_all"
        	    	    android:summary="@string/mod_recents_clear_all_summary"
        	    	    android:key="system_pref_clear_all"
        	    	    defaultValue="0" />
        	    	
        	    	<com.ultima.settings.preferences.UltimaListPreference 
        	    	    android:title="@string/mod_clear_all_position"
        	    	    android:key="system_pref_clear_all_position"
        	    	    android:summary="@string/list_summary"
        	    	    android:entries="@array/clear_all_position_entries"
					    android:entryValues="@array/clear_all_position_values"
					    defaultValue="0"
					    android:dependency="system_pref_clear_all"/>
        	    	
        	    	<com.ultima.settings.preferences.UltimaCheckboxPreference    
        	    	    android:title="@string/mod_recents_rambar"
        	    	    android:summary="@string/mod_recents_rambar_summary"
        	    	    android:key="system_pref_rambar"
        	    	    defaultValue="0" />
        	    	
        	    	<!-- <com.ultima.settings.preferences.UltimaListPreference 
        	    	    android:title="@string/mod_rambar_position"
        	    	    android:key="system_pref_rambar_position"
        	    	    android:summary="@string/list_summary"
        	    	    android:entries="@array/clear_all_position_entries"
					    android:entryValues="@array/clear_all_position_values"
					    defaultValue="1"
					    android:dependency="system_pref_rambar"/> -->
        	    	
        	    	<com.ultima.settings.colorpicker.ColorPickerPreference
		        	    android:title="@string/mod_recents_rambar_color_left"
		        	    android:key="system_pref_rambar_color_left"
		        	    android:summary="@string/mod_recents_rambar_color_left_summary"
		        	    defaultValue="0xffffffff"
					    alphaSlider="true" />
        	    	
        	    	<com.ultima.settings.colorpicker.ColorPickerPreference
		        	    android:title="@string/mod_recents_rambar_color_right"
		        	    android:key="system_pref_rambar_color_right"
		        	    android:summary="@string/mod_recents_rambar_color_right_summary"
		        	    defaultValue="0xff888888"
					    alphaSlider="true" />
        	</PreferenceCategory>
    </PreferenceScreen>
</PreferenceScreen>
