<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:ultima="http://schemas.android.com/apk/res-auto/com.ultima.settings" >
    <PreferenceScreen 
        android:title="@string/launcher_screen_title"
        android:icon="?attr/launcherIcon"
        android:key="settings_launcher_screen">
        	
        <com.ultima.settings.preferences.NumberPickerPreference
            android:key="pref_key_workspaceRows"
            android:title="@string/launcher_title_workspace_rows"
            ultima:min="1"
            ultima:max="10"
            ultima:def="4" />
        <com.ultima.settings.preferences.NumberPickerPreference
            android:key="pref_key_workspaceCols"
            android:title="@string/launcher_title_workspace_cols"
            ultima:min="1"
            ultima:max="10"
            ultima:def="4" />

        <com.ultima.settings.preferences.NumberPickerPreference
            android:key="pref_key_workspaceDefaultPage"
            android:title="@string/launcher_title_default_workspace"
            ultima:def="0"
            ultima:min="0"
            ultima:max="10" />
        
        <com.ultima.settings.preferences.UltimaCheckboxPreference  
            android:key="pref_key_showSearchBar"
            android:title="@string/launcher_title_show_search_bar"
            android:summaryOn="@string/launcher_title_show_search_bar_on"
            android:summaryOff="@string/launcher_title_show_search_bar_off"
            defaultValue="1" />
        
         <com.ultima.settings.preferences.UltimaCheckboxPreference  
            android:key="pref_key_enableRotation"
            android:title="@string/launcher_title_rotation"
            android:summaryOn="@string/launcher_title_rotation_on"
            android:summaryOff="@string/launcher_title_rotation_off"
            defaultValue="0" />
         
            <Preference android:title="@string/restart_launcher" 
		    android:key="tool#restartlauncher" 
		    android:summary="@string/restart_launcher_summary" />      	
    </PreferenceScreen>
</PreferenceScreen>
