<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceScreen 
        android:title="@string/led_screen_title"
        android:key="screen_led_setting" 
        android:icon="?attr/ledIcon">
        
        	<PreferenceCategory
	           android:title="@string/battery_led_cat"
	           android:key="battery_led_cat">
	           
	           	<com.ultima.settings.colorpicker.ColorPickerPreference
	           	    android:title="@string/battery_led_low_colour" 
				    android:key="system_pref_batt_ledcolor_low" 
				    android:summary="@string/battery_led_low_colour_summary" 
				    defaultValue="0xffff0000" />
	           	
	           	<com.ultima.settings.colorpicker.ColorPickerPreference
	           	    android:title="@string/battery_led_med_colour" 
				    android:key="system_pref_batt_ledcolor_med" 
				    android:summary="@string/battery_led_med_colour_summary" 
				    defaultValue="0xffffff00" />
	           	
	           	<com.ultima.settings.colorpicker.ColorPickerPreference
	           	    android:title="@string/battery_led_full_colour" 
				    android:key="system_pref_batt_ledcolor_full" 
				    android:summary="@string/battery_led_full_colour_summary" 
				    defaultValue="0xff00ff00" />
	           	
	       </PreferenceCategory>
	       
	       <Preference
	           android:title="@string/information"
	           android:icon="?attr/alertIcon"
	           android:summary="@string/led_information"
	           style="?android:preferenceInformationStyle"
	           android:key="led_information"
	           android:selectable="false" />
	       
    </PreferenceScreen>
</PreferenceScreen>
