<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <!-- Network traffic meter -->
     <PreferenceScreen
             android:key="category_network_traffic"
             android:title="@string/network_traffic_title"
             android:icon="?attr/networkMeterIcon">

         <com.ultima.settings.preferences.UltimaListPreference
                 android:key="system_pref_network_traffic_meter"
                 android:title="@string/show_network_traffic_state"
                 android:entries="@array/show_network_traffic_state_entries"
                 android:entryValues="@array/show_network_traffic_state_values"
                 android:summary="@string/list_summary"
                 defaultValue="0" />
 
         <com.ultima.settings.preferences.UltimaListPreference
                 android:key="system_pref_network_traffic_unit"
                 android:title="@string/show_network_traffic_unit"
                 android:entries="@array/show_network_traffic_unit_entries"
                 android:entryValues="@array/show_network_traffic_unit_values"
                 android:summary="@string/list_summary"
                 defaultValue="0" />
 
         <com.ultima.settings.preferences.UltimaListPreference
                 android:key="system_pref_network_traffic_interval"
                 android:title="@string/show_network_traffic_frequency"
                 android:entries="@array/show_network_traffic_frequency_entries"
                 android:entryValues="@array/show_network_traffic_frequency_values"
                 android:summary="@string/list_summary"
                 defaultValues="0" />
         
         <com.ultima.settings.preferences.UltimaCheckboxPreference    
             android:key="system_pref_network_traffic_hide"
             android:title="@string/network_traffic_hide_inactivity" 
             android:summary="@string/network_traffic_hide_inactivity_summary"
             defaultValue="0"/>
         
         <com.ultima.settings.preferences.UltimaCheckboxPreference    
             android:key="system_pref_network_traffic_text"
             android:title="@string/network_traffic_text" 
             android:summary="@string/network_traffic_text_summary"
             defaultValue="0"/>
         
         <com.ultima.settings.preferences.UltimaCheckboxPreference    
             android:key="system_pref_network_traffic_icon"
             android:title="@string/network_traffic_icon" 
             android:summary="@string/network_traffic_icon_summary"
             defaultValue="1"/>
         
         <com.ultima.settings.colorpicker.ColorPickerPreference
        	    android:title="@string/network_traffic_color"
        	    android:key="system_pref_network_traffic_color"
        	    android:summary="@string/network_traffic_color_summary"
        	    defaultValue="0xffffffff"
			    alphaSlider="true" />
           
      </PreferenceScreen>
</PreferenceScreen>
